--- a/src/components/Molecules/UserCard/UserCard.module.css
+++ b/src/components/Molecules/UserCard/UserCard.module.css
@@ -1,12 +1,17 @@
 .container{
     display: flex;
-    gap: 10px;
+    justify-content: space-between;
     padding: 10px;
     width: 500px;
     background-color: rgb(60, 56, 56);
     border-radius: 5px;
+    align-items: end;
 }
-.InfoList{
+.containerSec{
+    display: flex;
+    gap: 10px;
+}
+.infoList{
     padding: 0px;
     margin: 0px;
     list-style: none;
@@ -16,4 +21,7 @@
 }
 .img{
     height: 100px;
+}
+.detailsButton{
+    background-color:rgb(111, 111, 119) ;
 }
