--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  width: fit-content;
+  height: fit-content;
+}
+.structure{
+  display: flex;
+  flex-direction: column;
 }
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
