--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
 .structure{
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
