--- a/src/components/Molecules/RepoCard/RepoCard.module.css
+++ b/src/components/Molecules/RepoCard/RepoCard.module.css
@@ -1,16 +1,28 @@
-.container{
+.container {
     display: flex;
+    justify-content: space-between;
     gap: 10px;
     padding: 10px;
     width: 500px;
     background-color: rgb(60, 56, 56);
     border-radius: 5px;
+    align-items: end;
 }
-.InfoList{
+
+.InfoList {
     padding: 0px;
     margin: 0px;
     list-style: none;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+
+.containerSec {
+    display: flex;
+    gap: 10px;
+}
+
+.detailsButton {
+    background-color: rgb(111, 111, 119);
 }
