--- a/src/components/Molecules/UserDetailsRepoCard/UserDetailsRepoCard.module.css
+++ b/src/components/Molecules/UserDetailsRepoCard/UserDetailsRepoCard.module.css
@@ -1,16 +1,34 @@
 .container {
     display: flex;
     flex-direction: column;
-    gap: 10px;
     background-color: rgb(60, 56, 56);
     padding: 5px 20px;
     border-radius: 10px;
+    align-items: flex-start;
 }
-.repoList{
+
+.repoList {
     list-style: none;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin: 0px;
     padding: 0px;
+}
+
+.repoName {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+.repoListSec {
+    width: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.detailsButton {
+    background-color: rgb(111, 111, 119);
 }
