--- a/src/components/Molecules/RepoCard/RepoCard.module.css
+++ b/src/components/Molecules/RepoCard/RepoCard.module.css
@@ -1,12 +1,11 @@
 .container {
     display: flex;
-    justify-content: space-between;
-    gap: 10px;
+    flex-direction: column;
     padding: 10px;
     width: 500px;
     background-color: rgb(60, 56, 56);
     border-radius: 5px;
-    align-items: end;
+    align-items: flex-start;
 }
 
 .InfoList {
@@ -18,11 +17,19 @@
     align-items: flex-start;
 }
 
-.containerSec {
+.infoListSec {
+    width: 100%;
     display: flex;
-    gap: 10px;
+    align-items: flex-end;
+    justify-content: space-between;
 }
 
 .detailsButton {
     background-color: rgb(111, 111, 119);
+}
+
+.repoName {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
 }
