--- a/src/components/Organisms/SearchesList/SearchesList.module.css
+++ b/src/components/Organisms/SearchesList/SearchesList.module.css
@@ -1,15 +1,21 @@
 .container {
-    background-color: #1a1a1a;
+    background-color: #3f3e3e;
     width: fit-content;
     height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 5px;
+    padding: 10px;
 }
 
-.usersList {
+.searchesList {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin-top: 15px;
+    text-align: left;
+}
+
+.title {
+    margin: 15px 0px;
 }
